# Sage

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  sage.spec
.agent/skills/: manifest.json
.agent/skills/ai-pattern-reducer/: SKILL.md  skill.json
.agent/skills/external-search/: SKILL.md  skill.json
.agent/skills/literature-index/: SKILL.md  skill.json
.agent/skills/paper-processing/: SKILL.md  skill.json
.agent/skills/writing-assistant/: SKILL.md  skill.json
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py  sync_version.py
src/sage/: __init__.py  api.py  cli.py  config.py  desktop.py  skill_hub_client.py  skill_system.py  workspace_manager.py
src/sage/agent/: __init__.py  loop.py  system_prompt.py
src/sage/agents/: __init__.py  loader.py  orchestrator.py  reflection.py
src/sage/agents/citation/: agent.json
src/sage/agents/coder/: agent.json
src/sage/agents/consolidator/: agent.json
src/sage/agents/debugger/: agent.json
src/sage/agents/literature/: agent.json
src/sage/agents/planner/: agent.json
src/sage/agents/reviewer/: agent.json
src/sage/context/: __init__.py  history.py  index.py  manager.py  tokenizer.py
src/sage/core/: __init__.py  mcp.py  observability.py  resilience.py
src/sage/llm/: __init__.py  client.py  provider.py
src/sage/memory/: __init__.py  long_term.py  memory_orch.py  semantic.py  store.py
src/sage/tools/: __init__.py  engine.py  file_ops.py  paper_ops.py  skill_ops.py  types.py  web.py
web/: electron-builder.json  index.html  package-lock.json  package.json  vite.config.js
web/electron/: main.cjs  preload.cjs
web/src/: App.vue  style.css
web/src/components/: AgentsView.vue  ChatInput.vue  ChatMessage.vue  ConfirmDialog.vue  DashboardView.vue  IndexModal.vue  SettingsPanel.vue  Sidebar.vue  SkillsPanel.vue  SkillsView.vue  StatsModal.vue  StatusBar.vue  TitleBar.vue  ToolCall.vue  WorkspaceView.vue
web/src/composables/: useChat.js
workspaces/: registry.json
(+1 files in other folders)
